Kubernetes/central_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-app
  template:
    metadata:
      labels:
        app: central-app
    spec:
      containers:
        - name: central-lib-container
          image: kalinic/central_lib:latest
          ports:
            - containerPort: 9000
        - name: mysql-db-container
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
