Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lib-ingress
  labels:
    name: lib-ingress

spec:
  rules:
    - host: kaljuga.com
      http:
        paths:
          - pathType: Prefix
            path: /bg
            backend:
              service:
                name: city-app-bg-service
                port:
                  number: 9001
          - pathType: Prefix
            path: /ns
            backend:
              service:
                name: city-app-ns-service
                port:
                  number: 9001
          - pathType: Prefix
            path: /ni
            backend:
              service:
                name: city-app-ni-service
                port:
                  number: 9001
